# Advent-of-Code-2022

./: README.md  pyproject.toml
day1/: day1.ipynb
day10/: day10.ipynb
day11/: day11.ipynb
day2/: day2.ipynb
day3/: day3.ipynb
day4/: day4.ipynb
day5/: day5.ipynb
day6/: day6.ipynb
day7/: day7.ipynb
day8/: day8.ipynb
day9/: day9.ipynb
src/aoc2022/: utils.py
